--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -50,13 +50,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get --yes install --no-install-recommends $(cat ${{ env.PACKAGES }})
-          sudo apt-get install pigz
+          sudo apt-get install pigz jq
 
       - name: Create Manifest Zip File
         run: |
-          # Get the list of files from manifest.json
+          # Print the output of jq to debug
+          echo "Files from manifest.json: $(jq -r '.files[]' $MANIFEST_FILE)"
           files_to_zip=$(jq -r '.files[]' $MANIFEST_FILE)
-          # Zip the manifest file and the specified files
           pigz -r -9 manifest_files.zip $MANIFEST_FILE $files_to_zip
 
       - name: Compute Current Hash
