--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           # Print the output of jq to debug
           echo "Files from manifest.json: $(jq -r '.files[]' $MANIFEST_FILE)"
-          files_to_zip=$(jq -r '.files[]' $MANIFEST_FILE)
+          files_to_zip=$(jq -r '.files[]' $MANIFEST_FILE | paste -s -d ' ')
           pigz -r -9 manifest_files.zip $MANIFEST_FILE $files_to_zip
 
       - name: Compute Current Hash
