--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "mlops-project",
   "files": [
-    "pipeline",
     "LICENSE",
     "README.md",
     "Final_Project_Team_3_Deliverable_1.pdf",
     "Final_Project_Team_3_Deliverable_2.mp4",
-    "Final_Project_Team_3_Deliverable_2.pptx"
+    "Final_Project_Team_3_Deliverable_2.pptx",
+    "pipeline/*"
   ],
   "hash": "",
   "size": ""
