--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,71 @@
     "Final_Project_Team_3_Deliverable_1.pdf",
     "Final_Project_Team_3_Deliverable_2.mp4",
     "Final_Project_Team_3_Deliverable_2.pptx",
-    "pipeline/*"
+    "pipeline/Makefile",
+    "pipeline/data/external/.gitkeep",
+    "pipeline/data/raw/.gitignore",
+    "pipeline/data/raw/data.parquet",
+    "pipeline/data/raw/.gitkeep",
+    "pipeline/data/interim/.gitignore",
+    "pipeline/data/processed/.gitignore",
+    "pipeline/data/processed/data_processed.csv",
+    "pipeline/data/processed/feature_names.joblib",
+    "pipeline/data/processed/autogluon/.gitignore",
+    "pipeline/data/processed/autogluon/train_preprocessed.csv",
+    "pipeline/data/processed/neural_network/.gitignore",
+    "pipeline/data/processed/neural_network/X_test.npy",
+    "pipeline/data/processed/neural_network/X_train.npy",
+    "pipeline/data/processed/neural_network/pca.pkl",
+    "pipeline/data/processed/neural_network/scaler.pkl",
+    "pipeline/data/processed/neural_network/y_train.npy",
+    "pipeline/data/processed/neural_network/X_val.npy",
+    "pipeline/data/processed/neural_network/y_test.npy",
+    "pipeline/data/processed/neural_network/y_val.npy",
+    "pipeline/data/processed/test.csv",
+    "pipeline/data/processed/train.csv",
+    "pipeline/data/processed/logistic_regression/.gitignore",
+    "pipeline/data/processed/logistic_regression/train_preprocessed.csv",
+    "pipeline/data/processed/mapping.json",
+    "pipeline/data/processed/data_featured.csv",
+    "pipeline/data/processed/.gitkeep",
+    "pipeline/dvc.lock",
+    "pipeline/dvc.yaml",
+    "pipeline/dvclive/.gitignore",
+    "pipeline/dvclive/metrics.json",
+    "pipeline/dvclive/params.yaml",
+    "pipeline/feature_store.yaml",
+    "pipeline/main.py",
+    "pipeline/models/autogluon/artifacts/metrics/params.yaml",
+    "pipeline/models/autogluon/artifacts/model/version.txt",
+    "pipeline/models/autogluon/artifacts/model/metadata.json",
+    "pipeline/models/autogluon/model.py",
+    "pipeline/models/neural_network/artifacts/metrics/params.yaml",
+    "pipeline/models/neural_network/model.py",
+    "pipeline/models/logistic_regression/artifacts/metrics/params.yaml",
+    "pipeline/models/logistic_regression/model.py",
+    "pipeline/packages.txt",
+    "pipeline/reports/cleanlab/problematic_cases.csv",
+    "pipeline/reports/cleanlab/cleanlab_confidence_distribution.png",
+    "pipeline/reports/cleanlab/feature_importance.csv",
+    "pipeline/reports/cleanlab/detailed_analysis.txt",
+    "pipeline/reports/cleanlab/cleanlab_confusion_matrix.png",
+    "pipeline/reports/plots/age_vs_readmission.png",
+    "pipeline/reports/plots/readmitted_distribution.png",
+    "pipeline/reports/plots/time_in_hospital_vs_readmission.png",
+    "pipeline/reports/plots/correlation_matrix.png",
+    "pipeline/reports/plots/service_utilization_vs_readmission.png",
+    "pipeline/requirements-frozen.txt",
+    "pipeline/requirements.txt",
+    "pipeline/src/visualize.py",
+    "pipeline/src/combine.py",
+    "pipeline/src/featurize.py",
+    "pipeline/src/preprocess.py",
+    "pipeline/src/destroy.py",
+    "pipeline/src/infrastruct.py",
+    "pipeline/src/nvidia_gpu.py",
+    "pipeline/src/ingest.py",
+    "pipeline/src/explore.py",
+    "pipeline/src/utils.py"
   ],
   "hash": "",
   "size": ""
