--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -54,9 +54,11 @@ jobs:
 
       - name: Create Manifest Zip File
         run: |
+          # Print the output of jq to debug
           echo "Files from manifest.json: $(jq -r '.files[]' $MANIFEST_FILE)"
           files_to_zip=$(jq -r '.files | join(" ")' $MANIFEST_FILE)
-          pigz -r -9 manifest_files.zip $MANIFEST_FILE $files_to_zip || {
+
+          pigz -r -9 $GITHUB_WORKSPACE/manifest_files.zip $GITHUB_WORKSPACE/$MANIFEST_FILE $files_to_zip || {
             echo "Error creating manifest_files.zip"
             exit 1
           }
@@ -64,7 +66,7 @@ jobs:
       - name: Compute Current Hash
         id: compute_hash
         run: |
-          CURRENT_HASH=$(sha256sum manifest_files.zip | awk '{print $1}')
+          CURRENT_HASH=$(sha256sum $GITHUB_WORKSPACE/manifest_files.zip | awk '{print $1}')
           echo "CURRENT_HASH=$CURRENT_HASH" >> $GITHUB_ENV
 
       - name: Get Previous Hash
