--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -36,12 +36,12 @@ jobs:
       manifest_changed: ${{ steps.manifest_check.outputs.manifest_changed }}
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
 
       - name: Cache Apt Archives
-        uses: actions/cache@v4.1.2
+        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4.1.2
         with:
           path: /var/cache/apt/archives
           key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}
@@ -58,6 +58,9 @@ jobs:
           readarray -t files_to_zip_array < <(jq -r '.files[]' "$MANIFEST_FILE")
           echo "Zipping the following files:"
           printf '%s\n' "${files_to_zip_array[@]}"
+
+          # Remove the existing ZIP file if it exists
+          rm -f manifest_files.zip
 
           zip -r manifest_files.zip "$MANIFEST_FILE" "${files_to_zip_array[@]}" || {
             echo "Error creating manifest_files.zip"
@@ -93,12 +96,12 @@ jobs:
     if: needs.check-manifest.outputs.manifest_changed == 'true'
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 1
 
       - name: Cache Apt Archives
-        uses: actions/cache@v4.1.2
+        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4.1.2
         with:
           path: /var/cache/apt/archives
           key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}
@@ -115,6 +118,9 @@ jobs:
           readarray -t files_to_zip_array < <(jq -r '.files[]' "$MANIFEST_FILE")
           echo "Zipping the following files:"
           printf '%s\n' "${files_to_zip_array[@]}"
+
+          # Remove the existing ZIP file if it exists
+          rm -f Final_Project_Team_3_Deliverable_3.zip
 
           zip -r Final_Project_Team_3_Deliverable_3.zip "${files_to_zip_array[@]}" || {
             echo "Error creating Final_Project_Team_3_Deliverable_3.zip"
@@ -146,7 +152,7 @@ jobs:
 
       - name: Push to Remote
         run: |
-          git add Final_Project_Team_3_Deliverable_3.zip "$MANIFEST_FILE"
+          git add "$MANIFEST_FILE"
           if git diff --staged --quiet; then
             echo "No changes detected. Skipping commit and push."
             echo "CHANGED=false" >> $GITHUB_ENV
@@ -154,19 +160,25 @@ jobs:
             git stash
             git pull origin main
             git stash pop
-            git add Final_Project_Team_3_Deliverable_3.zip "$MANIFEST_FILE"
-            git commit -m "Update deliverables: Size ${FILESIZE} bytes"
+            git add "$MANIFEST_FILE"
+            git commit -m "Update manifest.json with new hash and size"
             git push origin main || {
               echo "Push failed. Creating a pull request..."
-              gh pr create --title "Automated Deliverables Update" --body "Push to main failed. Updated deliverables included." --label "automated-pr"
+              gh pr create --title "Automated Manifest Update" --body "Push to main failed. Updated manifest included." --label "automated-pr"
             }
             echo "Changes committed and pushed successfully (or pull request created)."
             echo "CHANGED=true" >> $GITHUB_ENV
           fi
 
+      - name: Upload ZIP File as Artifact
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+        with:
+          name: Final_Project_Team_3_Deliverable_3
+          path: Final_Project_Team_3_Deliverable_3.zip
+
       - name: Repository Dispatch
         if: env.CHANGED == 'true'
-        uses: peter-evans/repository-dispatch@v3
+        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
