--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -96,12 +96,12 @@ jobs:
     if: needs.check-manifest.outputs.manifest_changed == 'true'
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 1
 
       - name: Cache Apt Archives
-        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4.1.2
+        uses: actions/cache@v4.1.2
         with:
           path: /var/cache/apt/archives
           key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}
@@ -150,9 +150,9 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config pull.rebase false
 
-      - name: Push to Remote
+      - name: Commit changes
         run: |
-          git add "$MANIFEST_FILE"
+          git add "$MANIFEST_FILE" Final_Project_Team_3_Deliverable_3.zip
           if git diff --staged --quiet; then
             echo "No changes detected. Skipping commit and push."
             echo "CHANGED=false" >> $GITHUB_ENV
@@ -160,25 +160,29 @@ jobs:
             git stash
             git pull origin main
             git stash pop
-            git add "$MANIFEST_FILE"
-            git commit -m "Update manifest.json with new hash and size"
-            git push origin main || {
-              echo "Push failed. Creating a pull request..."
-              gh pr create --title "Automated Manifest Update" --body "Push to main failed. Updated manifest included." --label "automated-pr"
-            }
-            echo "Changes committed and pushed successfully (or pull request created)."
+            git add "$MANIFEST_FILE" Final_Project_Team_3_Deliverable_3.zip
+            git commit -m "Add Final_Project_Team_3_Deliverable_3.zip"
+            echo "Changes committed."
             echo "CHANGED=true" >> $GITHUB_ENV
           fi
 
+      - name: Push to Remote
+        run: |
+          git push origin main || {
+            echo "Push failed. Creating a pull request..."
+            gh pr create --title "Automated Manifest and Deliverable Update" --body "Push to main failed. Updated manifest and Deliverable included." --label "automated-pr"
+          }
+          echo "Changes pushed successfully (or pull request created)."
+
       - name: Upload ZIP File as Artifact
-        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+        uses: actions/upload-artifact@v4.4.3
         with:
           name: Final_Project_Team_3_Deliverable_3
           path: Final_Project_Team_3_Deliverable_3.zip
 
       - name: Repository Dispatch
         if: env.CHANGED == 'true'
-        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
+        uses: peter-evans/repository-dispatch@v3.0.0
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
