--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -27,6 +27,11 @@ jobs:
   run-mlops-pipeline:
     runs-on: ubuntu-latest
     steps:
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get --yes install --no-install-recommends graphviz
+
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
