--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -30,7 +30,9 @@ jobs:
       - name: Install System Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get --yes install --no-install-recommends graphviz
+          sudo apt-get --yes install --no-install-recommends \
+            graphviz \
+            libgraphviz-dev
 
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
