--- a/pipeline/requirements.txt
+++ b/pipeline/requirements.txt
@@ -1,39 +1,31 @@
-autogluon.tabular[all]
-autoviz
-black[jupyter]
+autogluon
 boto3
+botocore
 cleanlab
-dask[dataframe]
-datasets
-dtale
-dvc[all]
-dvclive
-feast[aws]
-flake8
-hydra_colorlog
+dvc
+feast
+graphviz
 hydra-core
 imblearn
-isort
 joblib
 matplotlib
-missingno
-numba<=0.58.1
 numpy
-omegaconf
 optuna
 pandas
-pyjanitor
-python-dotenv
+pdf2image
+Pillow
+pyarrow
+pydantic
+pygraphviz
 python-pptx
 ray
-ruff
-scikit-learn
+requests
 seaborn
 shap
 tenacity
 tensorflow
-tensorflow-addons
-tensorflow-cpu
+tqdm
 ucimlrepo
+uv
 virtualenv
-ydata-profiling
+werkzeug
