--- a/pipeline/requirements.txt
+++ b/pipeline/requirements.txt
@@ -1,31 +1,34 @@
-autogluon
+autogluon.tabular[all]
+autoviz
+black[jupyter]
 boto3
-botocore
 cleanlab
-dvc
-feast
-graphviz
-hydra-core
+dask[dataframe]
+datasets
+dtale
+dvc[all]
+dvclive
+feast[aws]
+flake8
 imblearn
+isort
 joblib
 matplotlib
+missingno
+numba<=0.58.1
 numpy
 optuna
 pandas
-pdf2image
-Pillow
-pyarrow
-pydantic
-pygraphviz
+python-dotenv
 python-pptx
 ray
-requests
+ruff
+scikit-learn
 seaborn
 shap
 tenacity
 tensorflow
-tqdm
+tensorflow-addons
+tensorflow-cpu
 ucimlrepo
-uv
 virtualenv
-werkzeug
