--- a/pipeline/requirements.txt
+++ b/pipeline/requirements.txt
@@ -1,27 +1,25 @@
+aiohttp
 autogluon.tabular[all]
-autoviz
 black[jupyter]
-boto3
-cleanlab
 dask[dataframe]
 datasets
-dtale
 dvc[all]
 dvclive
-feast[aws]
 flake8
-imblearn
+hydra_colorlog
+hydra-core
 isort
 joblib
 matplotlib
-missingno
-numba<=0.58.1
 numpy
-optuna
+omegaconf
+openai
 pandas
-python-dotenv
+pdf2image
+Pillow
+pydantic<2.0
+pyjanitor
 python-pptx
-ray
 ruff
 scikit-learn
 seaborn
@@ -30,5 +28,4 @@ tenacity
 tensorflow
 tensorflow-addons
 tensorflow-cpu
-ucimlrepo
 virtualenv
