--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -3,8 +3,8 @@ stages:
     cmd:
       - pip install uv virtualenv
       - uv venv --python 3.10
-      - source .venv/bin/activate && uv pip install -r requirements.txt
-      - source .venv/bin/activate && pip freeze > requirements-frozen.txt
+      - . .venv/bin/activate && uv pip install -r requirements.txt
+      - . .venv/bin/activate && pip freeze > requirements-frozen.txt
     deps:
       - requirements.txt
     outs:
