--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -8,6 +8,7 @@ stages:
     deps:
       - requirements.txt
     outs:
+      - .venv/bin/activate
       - requirements-frozen.txt
 
   infrastruct:
