--- a/pipeline/requirements.txt
+++ b/pipeline/requirements.txt
@@ -1,32 +1,5 @@
-aiohttp
-autogluon.tabular[all]
-black[jupyter]
-dask[dataframe]
-datasets
-dvc[all]
-dvclive
-feast
-flake8
-hydra_colorlog
-hydra-core
-isort
-joblib
-matplotlib
-numpy
-omegaconf
-openai
-pandas
-pdf2image
-Pillow
-pydantic<2.0
-pyjanitor
-python-pptx
-ruff
-scikit-learn
-seaborn
-shap
-tenacity
-tensorflow
-tensorflow-cpu
-ucimlrepo
+dvc
+feast[aws]
+pipx
+uv
 virtualenv
